# slack-org-charter

./: .gitignore  README.md  main.py  pyproject.toml
docs/: 20251025_predicted.md  20251026_updates.md  errors.json  normalized_user_managers.json  normalized_user_roles.json  notes.md
src/: config.py  consts.py  evaluate.py  run_pipeline.py  utils.py
src/extract/: channels.py  messages.py  users.py
src/features/: __init__.py  channel_conventions.py  channel_features.py  channel_summaries.py  explicit_managers.py  manager_messages.py  mention_graph.py  user_features.py  web_search.py
src/inference/: __init__.py  normalize_user_managers.py  normalize_user_roles.py  user_manager.py  user_role.py
src/orgchart/: generate.py  model.py  visualize.py
tests/: conftest.py  test_utils.py
tests/orgchart/: test_generate.py  test_model.py
